# SmartDict

./: README.md  pyproject.toml  requirements.txt  setup.py
logos/: preview.html
smartdict/: __init__.py  dict_compiler.py  function.py  path.py  resolver.py  roba.py  smartdict.py
tests/: test_iterative_generated_keys.py  test_pipeline.py  test_smartdict.py
